upped ram used by mvn