@@ -49,7 +49,7 @@ RUN mkdir -p /usr/share/maven /usr/share/maven/ref \
 
 ENV MAVEN_HOME /usr/share/maven
 ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
-
+ENV MAVEN_OPTS="-Xmx2g -XX:MaxPermSize=1024m"
 
 VOLUME "$USER_HOME_DIR/.m2"
 
